force-app/main/default/objects/custom_create328__c/custom_create328__c.object-meta.xml
<CustomObject>
    <label>Custom created object328</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects328</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>