force-app/main/default/objects/custom_create328__c/fields/custom_create_328field526__c.field-meta.xml
<CustomField>
    <fullName>custom_create_328field526__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 328field526</label>
    <type>Checkbox</type>
</CustomField>