force-app/main/default/objects/custom_create328__c/fields/custom_create_328field547__c.field-meta.xml
<CustomField>
    <fullName>custom_create_328field547__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 328field547</label>
    <type>Checkbox</type>
</CustomField>